# Tutorial_AwesomeModernCPP

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  README.en.md  README.md  migrate_to_docusaurus.md  package.json  pnpm-lock.yaml
.claude/commands/: preflight.md
.claude/style/: writing-style.md
.github/DISCUSSION_TEMPLATE/: project-direction-and-contribution.md
.github/ISSUE_TEMPLATE/: config.yml  content-correction.yml  content-proposal.yml  example-build-problem.yml  site-problem.yml
.github/PULL_REQUEST_TEMPLATE/: README.md  article-submission.md  bugfix.md
.github/workflows/: deploy.yml  lint.yml
changelogs/: v0.4.0.md  v0.5.0.md
code/volumn_codes/vol4/design-patterns/Bridge/: Bridge.h  BridgeMain.cpp  CMakeLists.txt  Widget.cpp  Widget.h
code/volumn_codes/vol4/design-patterns/Singleton/GlobalConfig/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigManager_main.cpp  test_config.txt
code/volumn_codes/vol5-labs/: CMakeLists.txt  README.md
code/volumn_codes/vol5-labs/examples/lab0_thread_lifecycle/: CMakeLists.txt  README.md
code/volumn_codes/vol5-labs/examples/lab0_thread_lifecycle/include/lab0/: file_info.h  file_scanner.h  joining_thread.h  worker_stats.h
code/volumn_codes/vol5-labs/examples/lab0_thread_lifecycle/test/: test_milestone4.cpp
code/volumn_codes/vol5-labs/examples/lab1_bounded_queue/: CMakeLists.txt
code/volumn_codes/vol5-labs/examples/lab1_bounded_queue/include/lab1/: bounded_blocking_queue.h
code/volumn_codes/vol5-labs/examples/lab1_bounded_queue/test/: CMakeLists.txt  test_milestone2.cpp  test_milestone5.cpp
code/volumn_codes/vol5-labs/templates/lab0_thread_lifecycle/include/lab0/: file_info.h  file_scanner.h  joining_thread.h
code/volumn_codes/vol5-labs/templates/lab0_thread_lifecycle/test/: CMakeLists.txt  test_helpers.h  test_milestone1.cpp  test_milestone2.cpp  test_milestone3.cpp
code/volumn_codes/vol5-labs/templates/lab1_bounded_queue/include/lab1/: concurrent_cache.h  sync_practice.h
code/volumn_codes/vol5-labs/templates/lab1_bounded_queue/test/: test_milestone1.cpp  test_milestone3.cpp  test_milestone4.cpp  test_milestone6.cpp
documents/: 404.md  index.md  tags.md
documents/appendix/: index.md
documents/community/: index.md
documents/community/articles/: index.md
documents/community/incoming/: index.md
documents/compilation/: index.md
documents/cpp-reference/: index.md
documents/cpp-reference/concurrency/: index.md
documents/cpp-reference/containers/: index.md
documents/cpp-reference/core-language/: index.md
documents/cpp-reference/memory/: index.md
documents/cpp-reference/templates/: index.md
documents/en/: index.md  tags.md
documents/en/appendix/: index.md  terminology.md
documents/en/compilation/: 01-compilation-and-linking-overview.md  02-reuse-concept.md  03-creating-and-using-static-libs.md  04-dynamic-libraries-1.md  05-dynamic-library-design.md  06-symbol-visibility.md  07-symbol-missing-and-runtime-loading.md  08-library-search-logic.md  09-dynamic-library-details.md  10-dynamic-lib-as-executable.md  compilation-linking-2-reuse-concept  index.md
documents/en/cpp-reference/: index.md
documents/en/projects/: index.md
documents/en/team/: index.md
documents/en/vol1-fundamentals/: 00-preface.md  02-c-language-crash-course.md  03A-cpp98-namespace-reference.md  03B-cpp98-function-overload-default-args.md  03C-cpp98-classes-and-objects.md  03D-cpp98-inheritance-polymorphism.md  03E-cpp98-operator-overloading.md  03F-cpp98-casts-memory-exceptions.md  04-when-to-use-cpp.md  05-language-choice-performance-vs-maintainability.md  index.md
documents/en/vol2-modern-features/: index.md
documents/en/vol3-standard-library/: 01-array.md  01-initializer-lists.md  02-span.md  02-type-safe-register-access.md  03-circular-buffer.md  04-intrusive-containers.md  05-object-size-and-trivial-types.md  06-custom-allocators.md  index.md
documents/en/vol4-advanced/: 00-template-overview.md  01-coroutine-basics.md  01-function-templates.md  02-class-templates.md  02-coroutine-scheduler.md  03-empty-base-optimization.md  03-template-specialization.md  04-if-constexpr.md  04-non-type-template-params.md  05-spaceship-operator.md  05-template-args-and-name-lookup.md  06-template-friends-and-barton-nackman.md  07-template-aliases-and-using.md  08-templates-and-inheritance-crtp.md  cpp-templates-index.md  index.md  msvc-cpp-modules.md
documents/en/vol5-concurrency/: 01-atomic.md  02-memory-order.md  03-coroutine-echo-server.md  03-lock-free-data-structures.md  04-mutex-and-raii-guards.md  06-critical-section-protection.md  index.md
documents/en/vol6-performance/: index.md  (+3 more)
documents/projects/: index.md
documents/team/: index.md
documents/vol1-fundamentals/: index.md
documents/vol2-modern-features/: index.md
documents/vol3-standard-library/: 13-custom-allocators.md  index.md
documents/vol4-advanced/: 02-class-templates.md  03-empty-base-optimization.md  03-template-specialization.md  04-non-type-template-params.md  05-spaceship-operator.md  05-template-args-and-name-lookup.md  07-template-aliases-and-using.md  08-templates-and-inheritance-crtp.md  index.md
documents/vol5-concurrency/: index.md
documents/vol6-performance/: 06-evaluating-performance-and-size.md  index.md
documents/vol7-engineering/: 03-linker-and-linker-scripts.md  index.md
documents/vol8-domains/: index.md
documents/vol9-open-source-project-learn/: index.md
scripts/: build.ts  build_examples.py  check_bold_rendering.ts  check_links.py  check_quality.py  coverage.py  fix_frontmatter.py  setup_precommit.sh  tags.py  translate.py  validate_frontmatter.py
site/notes/: cpp-template-escape-vs-vue-components.md
todo/: 000-project-roadmap.md  010-vol1-fundamentals.md  011-vol2-modern-features.md  012-vol3-standard-library.md  013-vol4-advanced-topics.md  014-vol5-concurrency.md  015-vol6-performance.md  016-vol7-engineering.md  017-vol8-domains.md  018-vol9-open-source-study.md  019-vol10-lecture-notes.md  020-projects.md  030-community.md  031-qa-knowledge-base.md  README.md
(+492 files in other folders)
